intro page fixed with z-index and removing conflicting code on extra css, button in center

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,10 @@
     outline: none;
   }
 }
-
+@font-face {
+  font-family: LoRes;
+  src: url("../fonts/LoRes12OT-BoldAltOakland.ttf");
+}
 #secondPicture{
   width: 30%;
   margin-bottom: -10%;
@@ -27,9 +30,6 @@
           blink-caret 0.6s ease-out infinite;
 }
 
-
-
-
 img{
 
   image-rendering: crisp-edges;
@@ -39,9 +39,11 @@ img{
 body {
 
   font-family: LoRes, sans-serif;
-  background: url("../img/used/bg_bg.svg");
+  background-image: url(https://i.pinimg.com/originals/31/22/9d/31229d5403b0065a7fb0d5fbb43e5c92.gif);
+
+ /* background: url("../img/used/bg_bg.svg");*/
   background-repeat: no-repeat;
-  height: 100%;
+  height: 100vh;
   background-color: #9A9A9A;
   background-size: cover;
   background-position: center;
@@ -67,9 +69,33 @@ h1{
 //@keyframes blink-caret {
 //  from, to { border-color: transparent }
 //  50% { border-color: grey; }
-@font-face {
-  font-family: LoRes;
-  src: url("../fonts/LoRes12OT-BoldAltOakland.ttf");
+
+.Intro{
+  background-size: cover;
+  background: no-repeat;
+  width: 100%;
+  height: 100%;
+  .introButton{
+
+      width: 40%;
+      height: 30%;
+      border: none;
+      padding: 3vmin;
+      display: block;
+      background-image: url("../img/used/guessbtn_guess buttonn.svg");
+      background-repeat: no-repeat;
+      background-color: rgba(148, 225, 255, 0);
+      font-size: 2vw;
+      background-position: center center;
+      font-family: LoRes , sans-serif;
+      background-size: contain;
+      z-index: 30000;
+  position: absolute;
+    top: 50%;
+    left:50%;
+    margin-right:50%;
+    transform: translate(-50%,-50%);
+  }
 }
 
 .guessPokemon {
@@ -114,7 +140,6 @@ h1{
       width: 100%;
       height: 30%;
       border: none;
-
       padding: 3vmin;
       display: block;
       background-image: url("../img/used/guessbtn_guess buttonn.svg");
@@ -157,21 +182,15 @@ justify-content: space-around;
     z-index: -2;
 
   }
-
   .PokemonIcon {
     width: 30%;
     grid-column: 2/3;
-
   }
-
 
   #fightItem{
     visibility: hidden;
   }
 }
-
-
-
 
 .catchIt{
 
@@ -371,3 +390,4 @@ section.fadeIn{
   }
 
 }
+
