--- a/loading.css
+++ b/loading.css
@@ -1,14 +1,9 @@
 body {
 
-    min-height: 100%;
-
     background-size: cover;
+    overflow: hidden;
 
-
-       /*background-color: rgba(255,255,255,1);*/
-       
-       /* background-blend-mode: luminosity;*/
-       /* transition: background-color 1s ease-out;*/
+    /* transition: background-color 1s ease-out;*/
 
 }
 
@@ -16,22 +11,18 @@ h1 {
     top:22%;
     position: absolute;
     left: 50%;
-    margin-left: -1.9em;
-    color: hsla(0,0%,100%,.0);
-    /*font: 400 500% 'Arvo', serif;;*/
-
-      font: 400 500% 'Crete Round', serif;
+    color: black;
+    font: 400 500% 'LoRes 12 OT', serif;
 }
 
-                        /*font: 400 500% 'Press Start 2P', cursive;*/
 img
 {
     top:0;
- margin-left: -150%;
-z-index: 1;
-   height: 40%;
+    margin-left: -150%;
+    z-index: 1;
+    height: 40%;
     position:absolute;
-margin-top: 10%;
+    margin-top: 10%;
     -webkit-animation:myfirst 17s infinite; /* Chrome, Safari, Opera */
     animation:myfirst 17s;
 }
@@ -42,14 +33,10 @@ margin-top: 10%;
 /* Standard syntax */
 @keyframes myfirst
 {
-
-    0%   { left:25%; top:0px;transform:rotate(29deg)}
+    0%   { left:25%; top:0;transform:rotate(29deg)}
     50%  {left:100%; margin-left:100px;}
-    100% {left:30%; top:0px;transform:rotate(-20deg)}
+    100% {left:30%; top:0;transform:rotate(-20deg)}
 }
-
-
-
 
 @keyframes loading {
     from { max-width: 0; }
@@ -66,27 +53,3 @@ h1:before {
 
 }
 
-
-
-
-
-
-
-
-
-
-        body::before {
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-image: url(https://i.pinimg.com/originals/31/22/9d/31229d5403b0065a7fb0d5fbb43e5c92.gif);
-  background-size: cover;
-  filter: grayscale(100%);
-}
-body-inside {
-  position: relative;
-  font: bold 42px sans-serif;
-}
